--- a/src/app/heroes/pages/buscar/buscar.component.html
+++ b/src/app/heroes/pages/buscar/buscar.component.html
@@ -1,1 +1,40 @@
-<p>buscar works!</p>
+<div fxLayout="column">
+
+  <div>
+    <h1>Buscador de Heroes</h1>
+    <mat-divider></mat-divider>
+  </div>
+
+  <div fxLayout="column">
+    <h3>Buscador</h3>
+
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Number</mat-label>
+      <input type="text"
+        placeholder="Pick one"
+        aria-label="Number"
+        matInput
+        [(ngModel)]="termino"
+        (input)="buscando()"
+        [matAutocomplete]="auto">
+      <mat-autocomplete
+        autoActiveFirstOption
+        (optionSelected)="opcionSeleccionada( $event )"
+        #auto="matAutocomplete">
+
+        <mat-option *ngFor="let heroe of heroes" [value]="heroe">
+          {{ heroe.superhero }}
+        </mat-option>
+
+        <mat-option *ngIf="heroes.length === 0 && termino.trim(). length > 0" value="">
+          No se encontró algo con el término  {{ termino }}.
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+  </div>
+
+  <div *ngIf="heroeSeleccionado">
+    <app-heroe-tarjeta [heroe]="heroeSeleccionado"></app-heroe-tarjeta>
+  </div>
+</div>
+
