--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -76,16 +76,29 @@
 
     <br>
 
-    <button
-      mat-raised-button
-      (click)="guardar()"
-      color="primary">
-      <mat-icon>edit</mat-icon>
-      Guardar
-    </button>
+    <div fxLayout>
+      <button
+        mat-raised-button
+        (click)="guardar()"
+        color="primary">
+        <mat-icon>edit</mat-icon>
+        Guardar
+        </button>
 
+      <span class="spacer"></span>
+
+      <button *ngIf="heroe.id"
+        mat-raised-button
+        color="warn"
+        (click)='borrarHeroe()'
+        >
+        <mat-icon>remove</mat-icon>
+        Borrar
+      </button>
   </div>
 
+
+    </div>
   <div fxFlex="50">
     <img [src]='heroe | imagen'>
   </div>
