--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,5 +1,7 @@
-<h1>Nuevo Héroe <small>{{ heroe.superhero }} </small></h1>
-
+<h1>
+  {{ ( heroe.id) ? 'Editar' : 'Nuevo' }}
+  Héroe
+  <small>{{ heroe.superhero }} </small></h1>
 <div
   fxLayout="row"
   fxLayout.xs="column"
@@ -82,7 +84,7 @@
         (click)="guardar()"
         color="primary">
         <mat-icon>edit</mat-icon>
-        Guardar
+        {{ ( heroe.id) ? 'Actualizar' : 'Crear' }}
         </button>
 
       <span class="spacer"></span>
